# GPTracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  RunTests.py
include/: Camera.h  Canvas.h  CommonOperations.h  GPTracer.h  Intersection.h  Mat.h  Material.h  PPM.h  Patterns.h  Pointlight.h  Ray.h  Shape.h  Sphere.h  Tuple.h  World.h  YAMLtoScene.h
src/: CommonOperations.c  GPTracer.c  PPM.c  Tuple.c
src/datatypes/: Camera.c  Canvas.c  Intersection.c  Mat.c  Material.c  Patterns.c  Pointlight.c  Ray.c  Shape.c  Sphere.c  Tuple.c  World.c  YAMLtoScene.c
tests/: CMakeLists.txt  test_Camera.c  test_Canvas.c  test_Intersection.c  test_Mat.c  test_Material.c  test_Patterns.c  test_Pointlight.c  test_Ray.c  test_Shape.c  test_Sphere.c  test_Tuple.c  test_World.c  test_YAMLtoScene.c
yaml/: emptyWorld.yaml  test.yaml  testLight.yaml
